exports[`<AppSecret /> should call the click handler when "Get New Secret" is pressed 1`] = `
<div>
  <button
    className="btn concur-blue"
    onClick={[Function]}
    type="button">
    Get New Secret
  </button>
</div>
`;

exports[`<AppSecret /> should not display the secret if not provided 1`] = `
<div>
  <button
    className="btn concur-blue"
    onClick={[Function]}
    type="button">
    Get New Secret
  </button>
</div>
`;

exports[`<AppSecret /> should not display the secret if showSecret is false 1`] = `
<div>
  <p>
    <strong>
      Here is your new app secret.
    </strong>
    <br />
    <code>
      a-test-secret
    </code>
  </p>
  <button
    className="btn concur-blue"
    onClick={[Function]}
    type="button">
    Get New Secret
  </button>
</div>
`;
